Add unit and integration tests for the new property tags in StickyNote. Closes #1