@@ -2,17 +2,20 @@ package org.softwarecave.springbootnote.note;
 
 import jakarta.validation.ConstraintViolationException;
 import org.junit.jupiter.api.Test;
-import org.softwarecave.springbootnote.note.service.StickyNoteService;
 import org.softwarecave.springbootnote.note.model.StickyNote;
 import org.softwarecave.springbootnote.note.model.StickyNoteLink;
+import org.softwarecave.springbootnote.note.model.StickyNoteTag;
 import org.softwarecave.springbootnote.note.model.Type;
+import org.softwarecave.springbootnote.note.service.StickyNoteService;
+import org.softwarecave.springbootnote.tag.model.Tag;
+import org.softwarecave.springbootnote.tag.service.TagService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -30,15 +33,21 @@ public class StickyNoteServiceIntegrationTest {
     public static final String URL2 = "http://oracle.com";
     public static final String URL3 = "http://google.pl";
     public static final String URL4 = "http://interia.pl";
-    public static final List<String> FOUR_URLS = Arrays.asList(URL1, URL2, URL3, URL4);
+    public static final List<String> FOUR_URLS = List.of(URL1, URL2, URL3, URL4);
 
+    public static final String TAG1 = "Tag1";
+    public static final String TAG2 = "Tag2";
+    public static final String TAG3 = "Tag3";
 
     @Autowired
     private StickyNoteService stickyNoteService;
 
+    @Autowired
+    private TagService tagService;
+
     @Test
-    public void addStickyNoteNoLinks_Valid() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_Valid() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
 
         var savedStickyNote = stickyNoteService.addStickyNote(stickyNote);
 
@@ -52,15 +61,15 @@ public class StickyNoteServiceIntegrationTest {
     }
 
     @Test
-    public void addStickyNoteNoLinks_PopulatedId() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_PopulatedId() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setId(5L);
         assertThrows(IllegalArgumentException.class, () -> stickyNoteService.addStickyNote(stickyNote));
     }
 
     @Test
-    public void addStickyNoteNoLinks_NullTitle() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_NullTitle() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setTitle(null);
         var e = assertThrows(Exception.class, () -> stickyNoteService.addStickyNote(stickyNote));
         assertIsConstraintViolationException(e);
@@ -68,48 +77,48 @@ public class StickyNoteServiceIntegrationTest {
 
 
     @Test
-    public void addStickyNoteNoLinks_EmptyTitle() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_EmptyTitle() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setTitle("");
         var e = assertThrows(Exception.class, () -> stickyNoteService.addStickyNote(stickyNote));
         assertIsConstraintViolationException(e);
     }
 
     @Test
-    public void addStickyNoteNoLinks_NullBody() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_NullBody() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setBody("");
         var e = assertThrows(Exception.class, () -> stickyNoteService.addStickyNote(stickyNote));
         assertIsConstraintViolationException(e);
     }
 
     @Test
-    public void addStickyNoteNoLinks_EmptyBody() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_EmptyBody() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setBody("");
         var e = assertThrows(Exception.class, () -> stickyNoteService.addStickyNote(stickyNote));
         assertIsConstraintViolationException(e);
     }
 
     @Test
-    public void addStickyNoteNoLinks_NullType() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_NullType() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setType(null);
         var e = assertThrows(Exception.class, () -> stickyNoteService.addStickyNote(stickyNote));
         assertIsConstraintViolationException(e);
     }
 
     @Test
-    public void addStickyNoteNoLinks_NullDate() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    public void addStickyNote_NullDate() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
         stickyNote.setCreated(null);
         var e = assertThrows(Exception.class, () -> stickyNoteService.addStickyNote(stickyNote));
         assertIsConstraintViolationException(e);
     }
 
     @Test
-    public void addStickyNote2Links_Valid() {
-        var stickyNote = createStickyNoteWith2Links();
+    public void addStickyNote2LinksAnd2Tags_Valid() {
+        var stickyNote = createStickyNoteWith2LinksAndTags();
 
         var savedStickyNote = stickyNoteService.addStickyNote(stickyNote);
 
@@ -120,6 +129,7 @@ public class StickyNoteServiceIntegrationTest {
                 .hasFieldOrPropertyWithValue("type", Type.PLAIN_TEXT);
         assertThat(savedStickyNote.getId()).isGreaterThan(0);
 
+        // verify links
         assertThat(savedStickyNote.getLinks()).hasSize(2);
 
         StickyNoteLink savedLink1 = savedStickyNote.getLinks().get(0);
@@ -129,11 +139,21 @@ public class StickyNoteServiceIntegrationTest {
         StickyNoteLink savedLink2 = savedStickyNote.getLinks().get(1);
         assertThat(savedLink2.getId()).isGreaterThan(0);
         assertThat(savedLink2.getLink()).isEqualTo(URL2);
+
+        // verify tags
+        assertThat(savedStickyNote.getTags()).hasSize(2);
+        StickyNoteTag savedTag1 = savedStickyNote.getTags().get(0);
+        assertThat(savedTag1.getId()).isGreaterThan(0);
+        assertThat(savedTag1.getTag().getName()).isEqualTo("Tag1");
+
+        StickyNoteTag savedTag2 = savedStickyNote.getTags().get(1);
+        assertThat(savedTag2.getId()).isGreaterThan(0);
+        assertThat(savedTag2.getTag().getName()).isEqualTo("Tag2");
     }
 
     @Test
-    public void updateStickyNote2Links_Valid_Add2NewLinks() {
-        var stickyNote = createStickyNoteWith2Links();
+    public void updateStickyNote2Links_Valid_Add2NewLinksAnd1Tag() {
+        var stickyNote = createStickyNoteWith2LinksAndTags();
         var addedStickyNote = stickyNoteService.addStickyNote(stickyNote);
 
         var link3 = new StickyNoteLink(null, addedStickyNote, URL3);
@@ -141,6 +161,8 @@ public class StickyNoteServiceIntegrationTest {
         addedStickyNote.getLinks().add(link3);
         addedStickyNote.getLinks().add(link4);
 
+        var tag3 = new StickyNoteTag(null, addedStickyNote, createOrGetTag(TAG3, "Tag3 description"));
+        addedStickyNote.getTags().add(tag3);
 
         var updatedStickyNote = stickyNoteService.updateStickyNote(addedStickyNote);
 
@@ -151,14 +173,23 @@ public class StickyNoteServiceIntegrationTest {
         assertThat(links).hasSize(4);
         assertTrue(links.stream().allMatch(link -> link.getId() > 0));
         assertTrue(links.stream().allMatch(link -> link.getStickyNote().getId().equals(updatedStickyNote.getId())));
-        assertTrue(links.stream().map(StickyNoteLink::getLink).toList().containsAll(FOUR_URLS));
+        assertThat(links.stream().map(StickyNoteLink::getLink).toList())
+                .containsAll(FOUR_URLS);
+
+        var tags = updatedStickyNote.getTags();
+        assertThat(tags).hasSize(3);
+        assertTrue(tags.stream().allMatch(tag -> tag.getId() > 0));
+        assertTrue(tags.stream().allMatch(tag -> tag.getStickyNote().getId().equals(updatedStickyNote.getId())));
+        assertThat(tags.stream().map(t -> t.getTag().getName()).toList())
+                .containsAll(List.of(TAG1, TAG2, TAG3));
     }
 
     @Test
-    public void updateStickyNote2Links_Valid_ModifyOneLink() {
-        var stickyNote = createStickyNoteWith2Links();
+    public void updateStickyNote2Links_Valid_ModifyOneLinkAndOneTag() {
+        var stickyNote = createStickyNoteWith2LinksAndTags();
         var addedStickyNote = stickyNoteService.addStickyNote(stickyNote);
         addedStickyNote.getLinks().getFirst().setLink(URL3);
+        addedStickyNote.getTags().getFirst().setTag(createOrGetTag(TAG3, "Tag3 description"));
 
         var updatedStickyNote = stickyNoteService.updateStickyNote(addedStickyNote);
 
@@ -169,15 +200,25 @@ public class StickyNoteServiceIntegrationTest {
         assertThat(links).hasSize(2);
         assertTrue(links.stream().allMatch(link -> link.getId() > 0));
         assertTrue(links.stream().allMatch(link -> link.getStickyNote().getId().equals(updatedStickyNote.getId())));
-        assertTrue(links.stream().map(StickyNoteLink::getLink).toList().containsAll(List.of(URL3, URL2)));
+        assertThat(links.stream().map(StickyNoteLink::getLink).toList())
+                .containsAll(List.of(URL3, URL2));
+
+        var tags = updatedStickyNote.getTags();
+        assertThat(tags).hasSize(2);
+        assertTrue(tags.stream().allMatch(tag -> tag.getId() > 0));
+        assertTrue(tags.stream().allMatch(tag -> tag.getStickyNote().getId().equals(updatedStickyNote.getId())));
+        assertThat(tags.stream().map(t -> t.getTag().getName()).toList())
+                .containsAll(List.of(TAG3, TAG2));
     }
 
     @Test
-    public void updateStickyNote2Links_Valid_AddOneLink() {
-        var stickyNote = createStickyNoteWith2Links();
+    public void updateStickyNote2Links_Valid_AddOneLinkAndOneTag() {
+        var stickyNote = createStickyNoteWith2LinksAndTags();
         var addedStickyNote = stickyNoteService.addStickyNote(stickyNote);
         var link3 = new StickyNoteLink(null, addedStickyNote, URL3);
         stickyNote.getLinks().add(link3);
+        var tag3 = new StickyNoteTag(null, addedStickyNote, createOrGetTag(TAG3, "Tag3 description"));
+        addedStickyNote.getTags().add(tag3);
 
         var updatedStickyNote = stickyNoteService.updateStickyNote(addedStickyNote);
 
@@ -188,14 +229,22 @@ public class StickyNoteServiceIntegrationTest {
         assertThat(links).hasSize(3);
         assertTrue(links.stream().allMatch(link -> link.getId() > 0));
         assertTrue(links.stream().allMatch(link -> link.getStickyNote().getId().equals(updatedStickyNote.getId())));
-        assertTrue(links.stream().map(StickyNoteLink::getLink).toList().containsAll(List.of(URL1, URL2, URL3)));
+        assertThat(links.stream().map(StickyNoteLink::getLink).toList())
+                .containsAll(List.of(URL1, URL2, URL3));
+
+        var tags = updatedStickyNote.getTags();
+        assertThat(links).hasSize(3);
+        assertTrue(tags.stream().allMatch(tag -> tag.getId() > 0));
+        assertTrue(tags.stream().allMatch(tag -> tag.getStickyNote().getId().equals(updatedStickyNote.getId())));
+        assertThat(tags.stream().map(t -> t.getTag().getName()).toList())
+                .containsAll(List.of(TAG1, TAG2, TAG3));
     }
 
     @Test
-    public void getStickyNote2Links_Valid() {
-        var stickyNote1 = createStickyNoteWith2Links();
+    public void getStickyNote2LinksAndTags_Valid() {
+        var stickyNote1 = createStickyNoteWith2LinksAndTags();
         stickyNote1.setTitle("Note1");
-        var stickyNote2 = createStickyNoteWith2Links();
+        var stickyNote2 = createStickyNoteWith2LinksAndTags();
         stickyNote2.setTitle("Note2");
         @SuppressWarnings("unused")
         var addedStickyNote1 = stickyNoteService.addStickyNote(stickyNote1);
@@ -207,13 +256,16 @@ public class StickyNoteServiceIntegrationTest {
         var links = gotStickyNote2.getLinks();
         assertThat(links).hasSize(2);
         assertTrue(links.stream().allMatch(link -> link.getId() > 0));
+        var tags = gotStickyNote2.getTags();
+        assertThat(tags).hasSize(2);
+        assertTrue(tags.stream().allMatch(tag -> tag.getId() > 0));
     }
 
     @Test
     public void getAllStickyNote2Links_Valid() {
-        var stickyNote1 = createStickyNoteWith2Links();
+        var stickyNote1 = createStickyNoteWith2LinksAndTags();
         stickyNote1.setTitle("Note1");
-        var stickyNote2 = createStickyNoteWith2Links();
+        var stickyNote2 = createStickyNoteWith2LinksAndTags();
         stickyNote2.setTitle("Note2");
         stickyNoteService.addStickyNote(stickyNote1);
         stickyNoteService.addStickyNote(stickyNote2);
@@ -224,16 +276,23 @@ public class StickyNoteServiceIntegrationTest {
         assertTrue(stickyNotes.stream().map(StickyNote::getTitle).toList().containsAll(allTitles));
     }
 
-    private static StickyNote createStickyNoteWith2Links() {
-        var stickyNote = createStickyNoteWithoutLinks();
+    private StickyNote createStickyNoteWith2LinksAndTags() {
+        var stickyNote = createStickyNoteWithoutLinksAndTags();
+
         var link1 = new StickyNoteLink(null, stickyNote, URL1);
         var link2 = new StickyNoteLink(null, stickyNote, URL2);
         stickyNote.getLinks().add(link1);
         stickyNote.getLinks().add(link2);
+
+        var tag1 = new StickyNoteTag(null, stickyNote, createOrGetTag(TAG1, "Tag1 description"));
+        var tag2 = new StickyNoteTag(null, stickyNote, createOrGetTag(TAG2, "Tag2 description"));
+        stickyNote.getTags().add(tag1);
+        stickyNote.getTags().add(tag2);
+
         return stickyNote;
     }
 
-    private static StickyNote createStickyNoteWithoutLinks() {
+    private static StickyNote createStickyNoteWithoutLinksAndTags() {
         return new StickyNote(null, "My title", "My body", Type.PLAIN_TEXT, new ArrayList<>(), new ArrayList<>(), LocalDateTime.now());
     }
 
@@ -248,5 +307,13 @@ public class StickyNoteServiceIntegrationTest {
         assertFalse(false, "ConstraintViolationException expected but not thrown");
     }
 
-
+    private Tag createOrGetTag(String name, String description) {
+        var tagByName = tagService.getTagByName(name);
+        if (tagByName.isPresent()) {
+            return tagByName.get();
+        } else {
+            var tag = new Tag(null, name, description);
+            return tagService.addTag(tag);
+        }
+    }
 }
